# sfml-cmake-example

./: CMakeLists.txt  README.md  main.cpp
